--- a/画像形式変換/index.html
+++ b/画像形式変換/index.html
@@ -16,11 +16,11 @@
       background-color: #a0522d;
       color: #ffffff;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 16px;
       display: flex;
       align-items: center;
       padding: 5px 20px;
-      height: 25px; /* ヘッダーの高さを小さく設定 */
+      height: 30px; /* 高さを縮小 */
       box-sizing: border-box;
       text-transform: uppercase;
       letter-spacing: 1px;
@@ -31,7 +31,7 @@
     /* コンテナ */
     .container {
       display: flex;
-      height: calc(100vh - 25px); /* ヘッダー分を除外 */
+      height: calc(100vh - 30px); /* ヘッダー分を除外 */
     }
     /* 左側のコンテンツ */
     .left-content {
@@ -42,17 +42,15 @@
       padding: 15px;
     }
     .upload-button {
-      padding: 12px 24px;
+      padding: 8px 16px; /* ボタンの高さを縮小 */
       border: 2px solid #ffffff;
       border-radius: 5px;
-      font-size: 16px;
+      font-size: 14px;
       text-align: center;
       cursor: pointer;
       user-select: none;
       transition: 0.3s ease;
       text-transform: uppercase;
-      margin-bottom: 10px;
-      height: 40px; /* 高さを調整 */
     }
     .upload-button:hover {
       background-color: #ffffff;
@@ -93,19 +91,18 @@
     }
     .search-section input {
       flex-grow: 1;
-      padding: 10px;
+      padding: 8px 16px; /* 左側のボタンと同じ高さに調整 */
       background-color: #333;
       color: #ccc;
       border: 1px solid #555;
       border-radius: 5px;
       font-size: 14px;
-      height: 40px; /* 入力欄の高さを調整 */
     }
     .search-section input::placeholder {
       color: #777;
     }
     .search-section button {
-      padding: 12px 24px;
+      padding: 8px 16px; /* 左側のボタンと同じ高さに調整 */
       background-color: #a0522d;
       color: #ffffff;
       border: none;
@@ -114,7 +111,6 @@
       font-size: 14px;
       transition: 0.3s ease;
       text-transform: uppercase;
-      height: 40px; /* ボタンの高さを調整 */
     }
     .search-section button:hover {
       background-color: #8b3e22;
@@ -145,7 +141,6 @@
       font-size: 16px;
       transition: 0.3s ease;
       text-transform: uppercase;
-      height: 40px; /* ボタンの高さを調整 */
     }
     .download-button:hover {
       background-color: #8b3e22;
