--- a/index.html
+++ b/index.html
@@ -20,25 +20,22 @@
         header {
             display: flex;
             align-items: center;
+            justify-content: center;
             background-color: #ffffff;
             padding: 10px;
             border-bottom: 1px solid #ddd;
+            height: 100px; /* ヘッダー全体の高さ */
         }
 
         header img {
-            max-height: 50px; /* はみ出さないギリギリの大きさ */
-            margin-right: 10px;
-        }
-
-        header h1 {
-            font-size: 20px;
-            margin: 0;
+            max-height: 100%; /* ヘッダーの高さに収まるよう最大化 */
+            max-width: 100%; /* 幅も調整して歪み防止 */
         }
 
         /* メインコンテンツ */
         main {
             display: flex;
-            height: 100vh;
+            height: calc(100vh - 100px); /* ヘッダーを引いた高さ */
         }
 
         aside {
@@ -56,7 +53,6 @@
 <body>
     <header>
         <img src="https://hontani-hajime.github.io/server/%E6%AC%A1%E4%B8%96%E4%BB%A3%E3%82%A4%E3%83%B3%E3%83%86%E3%83%AA%E3%82%B7%E3%82%99%E3%82%A7%E3%83%B3%E3%82%B9.JPG" alt="ロゴ">
-        <h1>共通サーバー</h1>
     </header>
     <main>
         <aside>
