--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
         header {
             display: flex;
             align-items: center;
-            justify-content: center;
             background-color: #ffffff;
             padding: 5px;
             border-bottom: 1px solid #ddd;
-            height: 70px; /* ヘッダーの高さを小さめに設定 */
+            height: 70px; /* ヘッダーの高さ */
         }
 
         header img {
             max-height: 100%; /* ヘッダー内で最大限大きく */
-            max-width: 100%; /* 幅を調整して歪み防止 */
+            max-width: auto; /* 幅は自動調整 */
         }
 
         /* メインコンテンツ */
@@ -66,4 +65,3 @@
     </main>
 </body>
 </html>
-
