--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             padding: 10px;
         }
 
+        aside img {
+            max-width: 100%; /* 横幅いっぱいに広げる */
+            height: auto; /* 縦横比を維持 */
+            margin-bottom: 10px; /* 画像下に余白 */
+        }
+
         section {
             flex: 5;
             padding: 10px;
@@ -55,6 +61,8 @@
     </header>
     <main>
         <aside>
+            <!-- 左側の画像 -->
+            <img src="https://hontani-hajime.github.io/server/%E3%83%88%E3%83%83%E3%83%97/%E3%83%88%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="左側の画像">
             <!-- 左側のコンテンツ -->
             <p>サイドメニュー</p>
         </aside>
