--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <img src="https://hontani-hajime.github.io/server/%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB/%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB.jpg" alt="ファイル">
             <img src="https://hontani-hajime.github.io/server/%E3%82%A2%E3%83%97%E3%83%AA/%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.jpg" alt="アプリ">
             <img src="https://hontani-hajime.github.io/server/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/%E3%82%AB%E3%83%AC%E3%83%B3%E3%82%BF%E3%82%99%E3%83%BC.jpg" alt="カレンダー">
+            <img src="https://hontani-hajime.github.io/server/%E3%83%88%E3%83%83%E3%83%97/%E3%83%88%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="データベース">
         </aside>
         <section>
             <!-- メインコンテンツ（空） -->
