--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="学習記録表">
             <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="パスワード">
             <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="読書通帳">
-            <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="学習記録表">
-            <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="学習記録表">
-            <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="学習記録表">
+            <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="予算管理">
+            <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="グレードアップ">
+            <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="リバースプラン">
         </aside>
         <section>
             <!-- メインコンテンツ（空） -->
