--- a/カレンダー/index.html
+++ b/カレンダー/index.html
@@ -27,25 +27,25 @@
       border: none;
       border-radius: 5px;
     }
+    .content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      gap: 20px;
+    }
     .form-container, .calendar-container {
       border: 2px solid #483d8b;
       border-radius: 5px;
-      padding: 20px;
-      margin-top: 20px;
-      min-height: 300px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      padding: 10px;
+      background-color: #f9f9f9;
     }
     .form-container {
-      width: 100%;
-      height: 400px; /* ピクセルサイズ（縦400px 横600px） */
-      background-color: #f9f9f9;
+      width: 300px; /* プルダウンと同じ幅 */
+      height: 450px; /* 縦450px */
     }
     .calendar-container {
-      width: 100%;
-      height: 400px; /* ピクセルサイズ（縦400px 横600px） */
-      background-color: #f9f9f9;
+      width: 600px; /* 横をほどよく設定（少し広め） */
+      height: 450px; /* 縦450px */
     }
     .form-container p, .calendar-container p {
       font-size: 18px;
@@ -74,14 +74,17 @@
       <option value="011">011 その他</option>
     </select>
 
-    <!-- Googleフォーム埋め込み -->
-    <div class="form-container">
-      <p>ここにGoogleフォームを埋め込みます（縦400px、横600px）</p>
-    </div>
+    <!-- フォームとカレンダーのコンテナ -->
+    <div class="content">
+      <!-- Googleフォーム埋め込み -->
+      <div class="form-container">
+        <p>ここにGoogleフォームを埋め込みます（縦450px、横300px）</p>
+      </div>
 
-    <!-- Googleカレンダー埋め込み -->
-    <div class="calendar-container">
-      <p>ここにGoogleカレンダーを埋め込みます（縦400px、横600px）</p>
+      <!-- Googleカレンダー埋め込み -->
+      <div class="calendar-container">
+        <p>ここにGoogleカレンダーを埋め込みます（縦450px、横600px）</p>
+      </div>
     </div>
   </div>
 
