--- a/カレンダー/index.html
+++ b/カレンダー/index.html
@@ -31,7 +31,7 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      gap: 20px;
+      gap: 10px; /* 間隔を10pxに変更 */
     }
     .form-container, .calendar-container {
       border: 2px solid #483d8b;
