--- a/index.html
+++ b/index.html
@@ -47,11 +47,18 @@
             max-width: 100%; /* 横幅いっぱいに広げる */
             height: auto; /* 縦横比を維持 */
             margin-bottom: 10px; /* 画像下に余白 */
+            cursor: pointer; /* クリック可能なカーソル */
         }
 
         section {
             flex: 5;
             padding: 10px;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
     </style>
 </head>
@@ -61,11 +68,11 @@
     </header>
     <main>
         <aside>
-            <!-- 左側の画像 -->
+            <!-- 左側の画像（クリック可能） -->
             <img src="https://hontani-hajime.github.io/server/%E3%83%88%E3%83%83%E3%83%97/%E3%83%88%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="トップ">
             <img src="https://hontani-hajime.github.io/server/%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB/%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB.jpg" alt="ファイル">
             <img src="https://hontani-hajime.github.io/server/%E3%82%A2%E3%83%97%E3%83%AA/%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.jpg" alt="アプリ">
-            <img src="https://hontani-hajime.github.io/server/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/%E3%82%AB%E3%83%AC%E3%83%B3%E3%82%BF%E3%82%99%E3%83%BC.jpg" alt="カレンダー">
+            <img src="https://hontani-hajime.github.io/server/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/%E3%82%AB%E3%83%AC%E3%83%B3%E3%82%BF%E3%82%99%E3%83%BC.jpg" alt="カレンダー" id="calendarBtn">
             <img src="https://hontani-hajime.github.io/server/%E3%83%87%E3%83%BC%E3%82%BF%E3%83%99%E3%83%BC%E3%82%B9/%E3%83%86%E3%82%99%E3%83%BC%E3%82%BF%E3%83%98%E3%82%99%E3%83%BC%E3%82%B9.jpg" alt="データベース">
             <img src="https://hontani-hajime.github.io/server/%E8%87%AA%E5%88%86%E8%BF%BD%E8%B7%A1/%E8%87%AA%E5%88%86%E8%BF%BD%E8%B7%A1.jpg" alt="自分追跡">
             <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="学習記録表">
@@ -76,8 +83,16 @@
             <img src="https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E3%83%AA%E3%83%8F%E3%82%99%E3%83%BC%E3%82%B9%E3%83%95%E3%82%9A%E3%83%A9%E3%83%B3.jpg" alt="リバースプラン">
         </aside>
         <section>
-            <!-- メインコンテンツ（空） -->
+            <!-- メインコンテンツ -->
+            <iframe id="contentFrame" src="" frameborder="0"></iframe>
         </section>
     </main>
+
+    <script>
+        // カレンダーのボタンをクリックした時に表示するURL
+        document.getElementById('calendarBtn').addEventListener('click', function() {
+            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/";
+        });
+    </script>
 </body>
 </html>
