--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -1,1 +1,102 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>リバースプラン</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            text-align: left;
+            font-size: 24px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        td {
+            border: 1px solid #ddd;
+            padding: 10px;
+        }
+        td:first-child {
+            background-color: #f5f5f5;
+            font-size: 14px;
+            text-align: left;
+            width: 30%;
+        }
+        td:last-child {
+            font-size: 16px;
+            text-align: left;
+        }
+    </style>
+</head>
+<body>
+    <header>リバースプラン</header>
+    <table>
+        <tr>
+            <td>■ 家庭学習</td>
+            <td>家庭学習の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 神大附属小関係</td>
+            <td>神大附属小関係の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 神戸龍谷中高</td>
+            <td>神戸龍谷中高の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 神戸龍谷保健室</td>
+            <td>神戸龍谷保健室の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 神戸龍谷図書室</td>
+            <td>神戸龍谷図書室の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 茶道同好会</td>
+            <td>茶道同好会の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 鉄道研究会</td>
+            <td>鉄道研究会の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 図書委員会</td>
+            <td>図書委員会の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ カードゲーム同好会</td>
+            <td>カードゲーム同好会の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 井ノ岡デザインセミナー</td>
+            <td>井ノ岡デザインセミナーの詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ たのわくそろばん教室</td>
+            <td>たのわくそろばん教室の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ クレッシェンドピアノ教室</td>
+            <td>クレッシェンドピアノ教室の詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 個別指導塾キャリア</td>
+            <td>個別指導塾キャリアの詳細を記入</td>
+        </tr>
+        <tr>
+            <td>■ 神戸市青少年会館</td>
+            <td>神戸市青少年会館の詳細を記入</td>
+        </tr>
+    </table>
+</body>
+</html>
