--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -11,11 +11,12 @@
             padding: 0;
         }
         header {
-            background-color: #333;
-            color: #fff;
+            background-color: #fff;
+            color: #000;
             padding: 10px 20px;
             text-align: left;
             font-size: 24px;
+            border-bottom: 1px solid #ddd;
         }
         table {
             width: 100%;
