--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
             <img src="https://hontani-hajime.github.io/server/%E3%83%87%E3%83%BC%E3%82%BF%E3%83%99%E3%83%BC%E3%82%B9/%E3%83%86%E3%82%99%E3%83%BC%E3%82%BF%E3%83%98%E3%82%99%E3%83%BC%E3%82%B9.jpg" alt="データベース">
             <img src="https://hontani-hajime.github.io/server/%E8%87%AA%E5%88%86%E8%BF%BD%E8%B7%A1/%E8%87%AA%E5%88%86%E8%BF%BD%E8%B7%A1.jpg" alt="自分追跡">
             <img src="https://hontani-hajime.github.io/server/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8/%E5%AD%A6%E7%BF%92%E8%A8%98%E9%8C%B2%E8%A1%A8.jpg" alt="学習記録表">
-            <img src="https://hontani-hajime.github.io/server/%E3%83%91%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%89/%E3%83%8F%E3%82%9A%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%88%E3%82%99.jpg" alt="パスワード">
+            <img src="https://hontani-hajime.github.io/server/%E3%83%91%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%88%E3%82%99/%E3%83%8F%E3%82%9A%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%88%E3%82%99.jpg" alt="パスワード">
             <img src="https://hontani-hajime.github.io/server/%E8%AA%AD%E6%9B%B8%E9%80%9A%E5%B8%B3/%E8%AA%AD%E6%9B%B8%E9%80%9A%E5%B8%B3.jpg" alt="読書通帳">
             <img src="https://hontani-hajime.github.io/server/%E4%BA%88%E7%AE%97%E7%AE%A1%E7%90%86/%E4%BA%88%E7%AE%97%E7%AE%A1%E7%90%86.jpg" alt="予算管理">
             <img src="https://hontani-hajime.github.io/server/%E3%82%B0%E3%83%AC%E3%83%BC%E3%83%89%E3%82%A2%E3%83%83%E3%83%97/%E3%82%AF%E3%82%99%E3%83%AC%E3%83%BC%E3%83%88%E3%82%99%E3%82%A2%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="グレードアップ">
-            <img src="https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E3%83%AA%E3%83%8F%E3%82%99%E3%83%BC%E3%82%B9%E3%83%95%E3%82%9A%E3%83%A9%E3%83%B3.jpg" alt="リバースプラン">
+            <img src="https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E3%83%AA%E3%83%8F%E3%82%99%E3%83%BC%E3%82%B9%E3%83%95%E3%82%9A%E3%83%A9%E3%83%B3.jpg" alt="リバースプラン" id="reversePlanBtn">
         </aside>
         <section>
             <!-- メインコンテンツ -->
@@ -92,6 +92,11 @@
         // カレンダーのボタンをクリックした時に表示するURL
         document.getElementById('calendarBtn').addEventListener('click', function() {
             document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/";
+        });
+
+        // リバースプランのボタンをクリックした時に表示するURL
+        document.getElementById('reversePlanBtn').addEventListener('click', function() {
+            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/index.html";
         });
     </script>
 </body>
