--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -6,16 +6,24 @@
     <title>リバースプラン</title>
     <style>
         body {
+            background-color: white;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
-        header {
-            background-color: #fff;
-            color: #000;
-            padding: 10px 20px;
-            text-align: left;
-            font-size: 24px;
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .header {
+            text-align: center;
+            background-color: white;
+            color: #483d8b;
+            padding: 20px 0;
+            border-bottom: 2px solid #483d8b;
+            font-size: 28px;
+            font-weight: bold;
         }
         table {
             width: 100%;
@@ -39,64 +47,69 @@
     </style>
 </head>
 <body>
-    <header>リバースプラン</header>
-    <table>
-        <tr>
-            <td>■ 家庭学習</td>
-            <td>家庭学習の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 神大附属小関係</td>
-            <td>神大附属小関係の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 神戸龍谷中高</td>
-            <td>神戸龍谷中高の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 神戸龍谷保健室</td>
-            <td>神戸龍谷保健室の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 神戸龍谷図書室</td>
-            <td>神戸龍谷図書室の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 茶道同好会</td>
-            <td>茶道同好会の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 鉄道研究会</td>
-            <td>鉄道研究会の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 図書委員会</td>
-            <td>図書委員会の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ カードゲーム同好会</td>
-            <td>カードゲーム同好会の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 井ノ岡デザインセミナー</td>
-            <td>井ノ岡デザインセミナーの詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ たのわくそろばん教室</td>
-            <td>たのわくそろばん教室の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ クレッシェンドピアノ教室</td>
-            <td>クレッシェンドピアノ教室の詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 個別指導塾キャリア</td>
-            <td>個別指導塾キャリアの詳細を記入</td>
-        </tr>
-        <tr>
-            <td>■ 神戸市青少年会館</td>
-            <td>神戸市青少年会館の詳細を記入</td>
-        </tr>
-    </table>
+    <div class="container">
+        <!-- 見出し -->
+        <div class="header">リバースプラン</div>
+        
+        <!-- 表コンテンツ -->
+        <table>
+            <tr>
+                <td>■ 家庭学習</td>
+                <td>家庭学習の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 神大附属小関係</td>
+                <td>神大附属小関係の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 神戸龍谷中高</td>
+                <td>神戸龍谷中高の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 神戸龍谷保健室</td>
+                <td>神戸龍谷保健室の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 神戸龍谷図書室</td>
+                <td>神戸龍谷図書室の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 茶道同好会</td>
+                <td>茶道同好会の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 鉄道研究会</td>
+                <td>鉄道研究会の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 図書委員会</td>
+                <td>図書委員会の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ カードゲーム同好会</td>
+                <td>カードゲーム同好会の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 井ノ岡デザインセミナー</td>
+                <td>井ノ岡デザインセミナーの詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ たのわくそろばん教室</td>
+                <td>たのわくそろばん教室の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ クレッシェンドピアノ教室</td>
+                <td>クレッシェンドピアノ教室の詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 個別指導塾キャリア</td>
+                <td>個別指導塾キャリアの詳細を記入</td>
+            </tr>
+            <tr>
+                <td>■ 神戸市青少年会館</td>
+                <td>神戸市青少年会館の詳細を記入</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
