--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main>
         <aside>
             <!-- 左側の画像（クリック可能） -->
-            <img src="https://hontani-hajime.github.io/server/%E3%83%88%E3%83%83%E3%83%95%E3%82%9A/%E3%83%88%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="トップ">
+            <img src="https://hontani-hajime.github.io/server/%E3%83%88%E3%83%83%E3%83%97/%E3%83%88%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="トップ">
             <img src="https://hontani-hajime.github.io/server/%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB/%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB.jpg" alt="ファイル">
             <img src="https://hontani-hajime.github.io/server/%E3%82%A2%E3%83%97%E3%83%AA/%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.jpg" alt="アプリ">
             <img src="https://hontani-hajime.github.io/server/%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC/%E3%82%AB%E3%83%AC%E3%83%B3%E3%82%BF%E3%82%99%E3%83%BC.jpg" alt="カレンダー" id="calendarBtn">
@@ -80,7 +80,7 @@
             <img src="https://hontani-hajime.github.io/server/%E8%AA%AD%E6%9B%B8%E9%80%9A%E5%B8%B3/%E8%AA%AD%E6%9B%B8%E9%80%9A%E5%B8%B3.jpg" alt="読書通帳">
             <img src="https://hontani-hajime.github.io/server/%E4%BA%88%E7%AE%97%E7%AE%A1%E7%90%86/%E4%BA%88%E7%AE%97%E7%AE%A1%E7%90%86.jpg" alt="予算管理">
             <img src="https://hontani-hajime.github.io/server/%E3%82%B0%E3%83%AC%E3%83%BC%E3%83%89%E3%82%A2%E3%83%83%E3%83%97/%E3%82%AF%E3%82%99%E3%83%AC%E3%83%BC%E3%83%88%E3%82%99%E3%82%A2%E3%83%83%E3%83%95%E3%82%9A.jpg" alt="グレードアップ">
-            <img src="https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%95%E3%82%9A%E3%83%A9%E3%83%B3.jpg" alt="リバースプラン" id="reversePlanBtn">
+            <img src="https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/%E3%83%AA%E3%83%8F%E3%82%99%E3%83%BC%E3%82%B9%E3%83%95%E3%82%9A%E3%83%A9%E3%83%B3.jpg" alt="リバースプラン" id="reverseBtn">
         </aside>
         <section>
             <!-- メインコンテンツ -->
@@ -95,8 +95,8 @@
         });
 
         // リバースプランのボタンをクリックした時に表示するURL
-        document.getElementById('reversePlanBtn').addEventListener('click', function() {
-            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/index.html";
+        document.getElementById('reverseBtn').addEventListener('click', function() {
+            document.getElementById('contentFrame').src = "https://hontani-hajime.github.io/server/%E3%83%AA%E3%83%90%E3%83%BC%E3%82%B9%E3%83%97%E3%83%A9%E3%83%B3/";
         });
     </script>
 </body>
