--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -40,9 +40,14 @@
             text-align: left;
             width: 30%;
         }
-        td:last-child {
+        td:nth-child(2) {
             font-size: 16px;
             text-align: left;
+        }
+        td:last-child {
+            font-size: 14px;
+            text-align: center;
+            width: 10%;
         }
     </style>
 </head>
@@ -53,58 +58,72 @@
             <tr>
                 <td>■ 家庭学習</td>
                 <td>家庭学習の詳細を記入</td>
+                <td>維持</td>
             </tr>
             <tr>
                 <td>■ 神大附属小関係</td>
                 <td>神大附属小関係の詳細を記入</td>
+                <td>廃止</td>
             </tr>
             <tr>
                 <td>■ 神戸龍谷中高</td>
                 <td>神戸龍谷中高の詳細を記入</td>
+                <td>拡大</td>
             </tr>
             <tr>
                 <td>■ 神戸龍谷保健室</td>
                 <td>神戸龍谷保健室の詳細を記入</td>
+                <td>縮小</td>
             </tr>
             <tr>
                 <td>■ 神戸龍谷図書室</td>
                 <td>神戸龍谷図書室の詳細を記入</td>
+                <td>維持</td>
             </tr>
             <tr>
                 <td>■ 茶道同好会</td>
                 <td>茶道同好会の詳細を記入</td>
+                <td>廃止</td>
             </tr>
             <tr>
                 <td>■ 鉄道研究会</td>
                 <td>鉄道研究会の詳細を記入</td>
+                <td>拡大</td>
             </tr>
             <tr>
                 <td>■ 図書委員会</td>
                 <td>図書委員会の詳細を記入</td>
+                <td>縮小</td>
             </tr>
             <tr>
                 <td>■ カードゲーム同好会</td>
                 <td>カードゲーム同好会の詳細を記入</td>
+                <td>維持</td>
             </tr>
             <tr>
                 <td>■ 井ノ岡デザインセミナー</td>
                 <td>井ノ岡デザインセミナーの詳細を記入</td>
+                <td>廃止</td>
             </tr>
             <tr>
                 <td>■ たのわくそろばん教室</td>
                 <td>たのわくそろばん教室の詳細を記入</td>
+                <td>拡大</td>
             </tr>
             <tr>
                 <td>■ クレッシェンドピアノ教室</td>
                 <td>クレッシェンドピアノ教室の詳細を記入</td>
+                <td>縮小</td>
             </tr>
             <tr>
                 <td>■ 個別指導塾キャリア</td>
                 <td>個別指導塾キャリアの詳細を記入</td>
+                <td>維持</td>
             </tr>
             <tr>
                 <td>■ 神戸市青少年会館</td>
                 <td>神戸市青少年会館の詳細を記入</td>
+                <td>廃止</td>
             </tr>
         </table>
     </div>
