--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -57,7 +57,7 @@
         <table>
             <tr>
                 <td>■ 家庭学習</td>
-                <td>家庭学習の詳細を記入</td>
+                <td>主に教科書や新中問等の学校の宿題・スタサプを用いて、自学自習を行う</td>
                 <td>維持</td>
             </tr>
             <tr>
