--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -58,11 +58,11 @@
             <tr>
                 <td>■ 家庭学習</td>
                 <td>主に教科書や新中問等の学校の宿題・スタサプを用いて、自学自習を行う</td>
-                <td>維持</td>
+                <td>拡大</td>
             </tr>
             <tr>
                 <td>■ 神大附属小関係</td>
-                <td>神大附属小関係の詳細を記入</td>
+                <td>小学校の友達とのLINEトーク等小学校関係全般</td>
                 <td>廃止</td>
             </tr>
             <tr>
@@ -72,58 +72,58 @@
             </tr>
             <tr>
                 <td>■ 神戸龍谷保健室</td>
-                <td>神戸龍谷保健室の詳細を記入</td>
-                <td>縮小</td>
+                <td>体調不良時の休養・その他放課後等に暇な時、頻繁に訪れる</td>
+                <td>維持</td>
             </tr>
             <tr>
                 <td>■ 神戸龍谷図書室</td>
-                <td>神戸龍谷図書室の詳細を記入</td>
-                <td>維持</td>
-            </tr>
-            <tr>
-                <td>■ 茶道同好会</td>
-                <td>茶道同好会の詳細を記入</td>
-                <td>廃止</td>
-            </tr>
-            <tr>
-                <td>■ 鉄道研究会</td>
-                <td>鉄道研究会の詳細を記入</td>
+                <td>本を借りる時・その他休み時間や保健室から追い出された時に訪れる</td>
                 <td>拡大</td>
             </tr>
             <tr>
-                <td>■ 図書委員会</td>
-                <td>図書委員会の詳細を記入</td>
-                <td>縮小</td>
-            </tr>
-            <tr>
-                <td>■ カードゲーム同好会</td>
-                <td>カードゲーム同好会の詳細を記入</td>
+                <td>■ 茶道同好会</td>
+                <td>尾田美智子の話し相手（介護）をしつつ、お茶菓子を楽しむ</td>
                 <td>維持</td>
             </tr>
             <tr>
-                <td>■ 井ノ岡デザインセミナー</td>
-                <td>井ノ岡デザインセミナーの詳細を記入</td>
+                <td>■ 鉄道研究会</td>
+                <td>主に鉄オタ達の憩いの場。武内監視の下活動を行う</td>
                 <td>廃止</td>
             </tr>
             <tr>
+                <td>■ 図書委員会</td>
+                <td>月に数回、特に意味もなさそうな会議を開く</td>
+                <td>拡大</td>
+            </tr>
+            <tr>
+                <td>■ カードゲーム同好会</td>
+                <td>青谷の保健室でカードゲームを楽しむ非公認の部活動</td>
+                <td>拡大</td>
+            </tr>
+            <tr>
+                <td>■ 井ノ岡デザインセミナー</td>
+                <td>環境デザイン等、思いもよらなかった事ができる</td>
+                <td>拡大</td>
+            </tr>
+            <tr>
                 <td>■ たのわくそろばん教室</td>
-                <td>たのわくそろばん教室の詳細を記入</td>
+                <td>段位保持者を続出させる明石No. 1のそろばん塾</td>
                 <td>拡大</td>
             </tr>
             <tr>
                 <td>■ クレッシェンドピアノ教室</td>
-                <td>クレッシェンドピアノ教室の詳細を記入</td>
-                <td>縮小</td>
+                <td>ヤマハと違って、かなりの融通を聞いてくれる</td>
+                <td>拡大</td>
             </tr>
             <tr>
                 <td>■ 個別指導塾キャリア</td>
-                <td>個別指導塾キャリアの詳細を記入</td>
-                <td>維持</td>
+                <td>うんちみたいな高額教材を買わす宗教紛いな塾</td>
+                <td>廃止</td>
             </tr>
             <tr>
                 <td>■ 神戸市青少年会館</td>
-                <td>神戸市青少年会館の詳細を記入</td>
-                <td>廃止</td>
+                <td>自習室として活用でき、個室を借りることも可能</td>
+                <td>維持</td>
             </tr>
         </table>
     </div>
