--- a/リバースプラン/index.html
+++ b/リバースプラン/index.html
@@ -77,7 +77,7 @@
             </tr>
             <tr>
                 <td>■ 神戸龍谷図書室</td>
-                <td>本を借りる時・その他休み時間や保健室から追い出された時に訪れる</td>
+                <td>本を借りる時・その他休み時間に訪れる</td>
                 <td>拡大</td>
             </tr>
             <tr>
